feat: GhanaRide migration - Spring Boot REST API + Next.js 15 frontend